SBuild 0.1.4 -2012-10-23

* Added parameters to AntZip Ant wrapper: compress, keepCompression, filesOnly,
  fileSet, fileSete
* Added parameters to AntJar Ant wrapper: compress, keepCompression, filesOnly,
  metaInf, fileSet, fileSets, manifestEntries, manifestSectionEntries, service,
  services
* Added parameter to AntCopy Ant wrapper: fileSet
* Added @configuration annotation, to declare required configuration parameters
  in a project
* Eclipse plugin: Fixed an problem with an incomplete project classpath that
  could break loading of projects in some situations.
* Eclipse plugin: Handle errors while reading the build file and retrieving
  dependencies
* Improved ZipSchemeHandler: The targetFile parameter now treats its argument
  as path relative the to project directory.
* Internal changes in classpath handling. The various classpathes SBuild needs
  when reading, compiling and executing projects are now read from a properties
  file in the installation directory, which decouples embedded solutions like
  the Eclipse Plugin and allows them to load different SBuild versions.
* Added get method to Prop object, to easily test, if an property is set.
* Eclipse plugin: Decoupled plugin version from SBuild JARs. Plugin no longer 
  includes core packages and load SBuild JARs from it installation directory.
* Ensure, ZipSchemeHandler does not overwrite files with same name from
  different archives.

SBuild 0.1.3 - 2012-10-18

* Improved classloading for ScalaTest and JUnit addons.
* Incompatible API change: SchemeHandler can now have dependencies, when 
  implementing the trait SchemeHandlerWithDependencies and have access to them
  through the TargetContext, which will be given as parameter into resolve
  method.
* Added new ZipSchemeHandler to reference zipped resources, a typical use case
  for original online dependencies like TestNG, JUnit or SWT.
* Fixed a bug, where the self-evaluated up-to-date state of phony targets was